CAMEL-20651: camel-jbang - The open-api should use the new contract-first openapi